Feat: form de cadastro de alunos

--- a/src/main/webapp/heade.html
+++ b/src/main/webapp/heade.html
@@ -5,6 +5,19 @@
 <title>Academia Dev</title>
 </head>
 <body>
-	<h1>ACADEMIA DEVELOPER</h1>
+
+	<header>
+		<img src="./images/Loucademia_Logotipo.png" />
+		<nav>
+			<div>
+				<a href="novoAluno.html"> Novo Aluno </a><br>
+				<a href="pesquisaDeAluno.html"> Pesquisa Aluno </a><br>
+				<a href="controle.html"> Controle de Acesso </a><br>
+				<a href="relatorioEntradaSaida.html"> Relatorio de Entradas e Saidas </a><br>
+				<a href="relatorioSituacao.html"> Relatorios de Situações </a><br>
+			</div>
+		</nav>
+	</header>
+
 </body>
 </html>
