Feat: Pagina de Pesquisa de Alunos

--- a/src/main/webapp/novoAluno.html
+++ b/src/main/webapp/novoAluno.html
@@ -37,7 +37,7 @@
 				<input type="text" name="nome" placeholder="Nome do Aluno" id="nome"> <br>
 				
 				<b><label for="sexo">Sexo:</label></b><br>
-				<select id="sexo" nome="sexo">
+				<select id="sexo" name="sexo">
 					<option selected>:: Selecione o Sexo ::</option>
 					<option value="m">Masculino</option>
 					<option value="f">Feminino</option>
