--- a/src/main/webapp/controle.html
+++ b/src/main/webapp/controle.html
@@ -1,53 +1,80 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="pt-BR">
-<meta charset="ISO-8859-1">
-<title>Academia Dev</title>
+    <meta charset="ISO-8859-1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Academia Dev</title>
 </head>
 
 <style>
-table, th, td {
-  border:1px solid black;
-}
-td {
-  text-align:center;
-  vertical-align:middle;
-}
+    table,
+    th,
+    td {
+        border: 1px solid black;
+    }
+    
+    td {
+        text-align: center;
+        vertical-align: middle;
+    }
 </style>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"> <img src="./images/Loucademia_Logotipo.png" width="200px" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="novoAluno.html">Novo
+								Aluno</a></li>
 
-	<header>
-		<img src="./images/Loucademia_Logotipo.png" />
-		<nav>
-			<div>
-				<a href="novoAluno.html"> Novo Aluno </a><br>
-				<a href="pesquisaDeAluno.html"> Pesquisa Aluno </a><br>
-				<a href="controle.html"> Controle de Acesso </a><br>
-				<a href="relatorioEntradaSaida.html"> Relatorio de Entradas e Saidas </a><br>
-				<a href="relatorioSituacao.html"> Relatorios de Situações </a><br>
-			</div>
-		</nav>
-	</header>
-	
-	<h1>Controle de Acesso</h1>
-	<div id="infoMessage">
-		<p>Mensagens de Erro</p>
-	</div>
-	
-	<form action="">
-		<fieldset>
-			<legend>Parametros de Acesso</legend>
-			
-			<label for="idAluno">ID do Aluno</label> <br>
-			<input type="text" name="idAluno" id="idAluno" placeholder="ID do Aluno"> <br><br>
-			
-			<label for="rgAluno">RG do Aluno</label> <br>
-			<input type="text" name="rgAluno" id="rgAluno" placeholder="RG do Aluno"> <br><br>
-			
-			<input style="width: 175px" type="submit" value="Registrar Acesso">
-		</fieldset>
-	</form>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="pesquisaDeAluno.html">Pesquisar
+								Aluno</a></li>
+
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="controle.html">Controle de Acesso</a></li>
+
+                        <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Relatorios </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="relatorioEntradaSaida.html"> Relatorio de Entradas e
+										Saidas</a></li>
+                                <li><a class="dropdown-item" href="relatorioSituacao.html">Relatorios
+										de Situaï¿½ï¿½es</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-12">
+                <div class="card" style="width: 100%; margin-top: 5%">
+                    <div class="card-body">
+                        <h1 class="card-title" style="text-align: center">Controle de Acesso
+                        </h1>
+                        <div id="infoMessage" class="alert alert-danger" role="alert">
+                            A simple Mensagens de Erro</div>
+                        <form class="was-validated" action="">
+                            <div class="col-md-4">
+                                <label for="idAluno" class="form-label">ID do Aluno</label> <br>
+                                <input type="text" name="idAluno" id="idAluno" class="form-control is-valid" placeholder="ID do Aluno" required> <br> <label class="form-label" for="rgAluno">RG
+									do Aluno</label> <br> <input type="text" class="form-control is-valid" name="rgAluno" id="rgAluno" placeholder="RG do Aluno" required> <br> <input class="btn btn-success" style="width: 175px" type="submit" value="Registrar Acesso">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
