--- a/src/main/webapp/heade.html
+++ b/src/main/webapp/heade.html
@@ -2,22 +2,51 @@
 <html>
 <head lang="pt-BR">
 <meta charset="ISO-8859-1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <title>Academia Dev</title>
 </head>
 <body>
 
 	<header>
-		<img src="./images/Loucademia_Logotipo.png" />
-		<nav>
-			<div>
-				<a href="novoAluno.html"> Novo Aluno </a><br>
-				<a href="pesquisaDeAluno.html"> Pesquisa Aluno </a><br>
-				<a href="controle.html"> Controle de Acesso </a><br>
-				<a href="relatorioEntradaSaida.html"> Relatorio de Entradas e Saidas </a><br>
-				<a href="relatorioSituacao.html"> Relatorios de Situações </a><br>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#"> <img
+					src="./images/Loucademia_Logotipo.png" width="200px" />
+				</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="novoAluno.html">Novo Aluno</a></li>
+
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="pesquisaDeAluno.html">Pesquisar
+								Aluno</a></li>
+
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="controle.html">Controle de Acesso</a></li>
+
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Relatorios </a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item"
+									href="relatorioEntradaSaida.html"> Relatorio de Entradas e
+										Saidas</a></li>
+								<li><a class="dropdown-item" href="relatorioSituacao.html">Relatorios
+										de Situações</a></li>
+							</ul></li>
+					</ul>
+				</div>
 			</div>
-		</nav>
 	</header>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
