--- a/src/main/webapp/pesquisaDeAluno.html
+++ b/src/main/webapp/pesquisaDeAluno.html
@@ -2,93 +2,133 @@
 <html>
 <head lang="pt-BR">
 <meta charset="ISO-8859-1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
 <title>Academia Dev</title>
 </head>
 
 <style>
 table, th, td {
-  border:1px solid black;
+	border: 1px solid black;
 }
+
 td {
-  text-align:center;
-  vertical-align:middle;
+	text-align: center;
+	vertical-align: middle;
 }
 </style>
 
 <body>
 
 	<header>
-		<img src="./images/Loucademia_Logotipo.png" />
-		<nav>
-			<div>
-				<a href="novoAluno.html"> Novo Aluno </a><br>
-				<a href="pesquisaDeAluno.html"> Pesquisa Aluno </a><br>
-				<a href="controle.html"> Controle de Acesso </a><br>
-				<a href="relatorioEntradaSaida.html"> Relatorio de Entradas e Saidas </a><br>
-				<a href="relatorioSituacao.html"> Relatorios de Situações </a><br>
-			</div>
-		</nav>
-	</header>
-	
-	<h1>Pesquisa de Alunos</h1>
-	<div id="infoMessage">
-		<p>Mensagens de Erro</p>
-	</div>
-	
-	<form action="">
-		<fieldset>
-			<legend>Pesquisar Alunos</legend>
-			
-			<label for="idAluno">ID do Aluno</label> <br>
-			<input type="text" name="idAluno" id="idAluno" placeholder="ID do Aluno"> <br>
-			
-			<label for="nomeAluno">Nome do Aluno</label> <br>
-			<input type="text" name="nomeAluno" id="nomeAluno" placeholder="Nome do Aluno"> <br>
-			
-			<label for="rgAluno">RG do Aluno</label> <br>
-			<input type="text" name="rgAluno" id="rgAluno" placeholder="RG do Aluno"> <br>
-			
-			<label for="telefoneAluno">Telefone do Aluno</label> <br>
-			<input type="text" name="telefoneAluno" id="telefoneAluno" placeholder="Telefone do Aluno"> <br> <br>
-			
-			<input style="width: 100px" type="submit" value="Buscar">
-		</fieldset>
-	</form>
-	
-	<br> <br>
-	<table style="width:100%;">
-		<tr>
-			<th>ID</th>
-			<th>NOME</th>
-			<th>RG</th>
-			<th>E-MAIL</th>
-			<th>SITUAÇÃO</th>
-			<th>AÇÕES</th>
-		</tr>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#"> <img
+					src="./images/Loucademia_Logotipo.png" width="200px" />
+				</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="novoAluno.html">Novo Aluno</a></li>
 
-		<tr>
-			<td>001AC</td>
-			<td>Anisberto dos Reis</td>
-			<td>556545</td>
-			<td>anisberto@gmail.com</td>
-			<td>ATIVO</td>
-			<td>
-				<input type="button" value="Editar">
-				<input type="button" value="Excluir">
-			</td>
-		</tr>
-		<tr>
-			<td>003AR</td>
-			<td>Anisberto dos Reis</td>
-			<td>556545</td>
-			<td>anisberto@gmail.com</td>
-			<td>INATIVO</td>
-			<td>
-				<input type="button" value="Editar">
-				<input type="button" value="Excluir">
-			</td>
-		</tr>
-	</table>
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="pesquisaDeAluno.html">Pesquisar
+								Aluno</a></li>
+
+						<li class="nav-item"><a class="nav-link active"
+							aria-current="page" href="controle.html">Controle de Acesso</a></li>
+
+						<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">
+								Relatorios </a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item"
+									href="relatorioEntradaSaida.html"> Relatorio de Entradas e
+										Saidas</a></li>
+								<li><a class="dropdown-item" href="relatorioSituacao.html">Relatorios
+										de Situações</a></li>
+							</ul></li>
+					</ul>
+				</div>
+			</div>
+	</header>
+
+	<div class="container" style="padding-bottom: 5%">
+		<div class="row">
+			<div class="col-6 col-md-12">
+				<h1>Pesquisa de Alunos</h1>
+				<div class="alert alert-danger" id="infoMessage">
+					<p>Mensagens de Erro</p>
+				</div>
+
+				<form action="">
+
+					<label for="idAluno">ID do Aluno</label> <br> <input
+						style="width: 30%" class="form-control" type="text" name="idAluno"
+						id="idAluno" placeholder="ID do Aluno"> <br> <label
+						for="nomeAluno">Nome do Aluno</label> <br> <input
+						style="width: 30%" class="form-control" type="text"
+						name="nomeAluno" id="nomeAluno" placeholder="Nome do Aluno">
+					<br> <label for="rgAluno">RG do Aluno</label> <br> <input
+						type="text" style="width: 30%" class="form-control" name="rgAluno"
+						id="rgAluno" placeholder="RG do Aluno"> <br> <label
+						for="telefoneAluno">Telefone do Aluno</label> <br> <input
+						style="width: 30%" class="form-control" type="text"
+						name="telefoneAluno" id="telefoneAluno"
+						placeholder="Telefone do Aluno"> <br> <input
+						class="btn btn-success" style="width: 100px" type="submit"
+						value="Buscar">
+				</form>
+
+				<br>
+				<table class="table table-striped table-hover" style="width: 100%;">
+					<tr>
+						<th>ID</th>
+						<th>NOME</th>
+						<th>RG</th>
+						<th>E-MAIL</th>
+						<th>SITUAÇÃO</th>
+						<th>AÇÕES</th>
+					</tr>
+
+					<tr>
+						<td>001AC</td>
+						<td>Anisberto dos Reis</td>
+						<td>556545</td>
+						<td>anisberto@gmail.com</td>
+						<td>ATIVO</td>
+						<td><input class="btn btn-primary btn-sm" type="button"
+							value="Editar"> <input class="btn btn-sm btn-danger"
+							type="button" value="Excluir"></td>
+					</tr>
+					<tr>
+						<td>003AR</td>
+						<td>Anisberto dos Reis</td>
+						<td>556545</td>
+						<td>anisberto@gmail.com</td>
+						<td>INATIVO</td>
+						<td><input class="btn btn-primary btn-sm" type="button"
+							value="Editar"> <input class="btn btn-sm btn-danger"
+							type="button" value="Excluir"></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</div>
 
 </body>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+	crossorigin="anonymous"></script>
 </html>
