--- a/src/main/webapp/relatorioSituacao.html
+++ b/src/main/webapp/relatorioSituacao.html
@@ -15,6 +15,14 @@ table, th, td {
 	border: 1px solid black;
 }
 
+nav {
+	background-color: #5898c7 !important;
+}
+
+body {
+	background-color: #d8e0e6;
+}
+
 td {
 	text-align: center;
 	vertical-align: middle;
@@ -24,9 +32,9 @@ td {
 <body>
 
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-blue">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#"> <img
+				<a class="navbar-brand" href="heade.html"> <img
 					src="./images/Loucademia_Logotipo.png" width="200px" />
 				</a>
 				<button class="navbar-toggler" type="button"
@@ -79,8 +87,9 @@ td {
 						<option>ATIVO</option>
 						<option>INATIVO</option>
 						<option>COM PENDENCIAS</option>
-					</select> <input class="btn btn-success btn-sm" style="width: 10rem; margin-top: 2%"
-						type="submit" value="Gerar Relatorio">
+					</select> <input class="btn btn-success btn-sm"
+						style="width: 10rem; margin-top: 2%" type="submit"
+						value="Gerar Relatorio">
 
 				</form>
 
