--- a/src/main/webapp/dadosAluno.xhtml
+++ b/src/main/webapp/dadosAluno.xhtml
@@ -129,7 +129,10 @@
 				<br />
 				
 				<input type="submit" value="Gravar" jsf:action="#{alunoBean.gravar}" />&#160;
-				<input type="button" value="Relatorio de entradas e saidas" />
+				<input type="button" value="Relatorio de entradas e saidas" 
+					jsf:outcome="relatoriosDeEntradaSaida?matricula=#{alunoBean.aluno.matricula}"
+					jsf:rendered="#{alunoBean.matricula != null}"
+					/>
 	
 			</form>
 		</ui:define>
