ajustes finais dos modulos de busca e controle de acesso

--- a/src/main/webapp/pesquisaDeAluno.xhtml
+++ b/src/main/webapp/pesquisaDeAluno.xhtml
@@ -10,9 +10,9 @@
 	<ui:composition template="layout.xhtml">
 	<ui:param name="title" value="Pesquisa de aluno" />
 		<ui:define name="conteudo">
-			<!--   f:metadata>
+			<f:metadata>
 				<f:viewAction action="#{pesquisaAlunoBean.check}" />
-			</f:metadata -->
+			</f:metadata >
 			
 			<form jsf:id="form">
 				<fieldset>
